--- a/fileklp1.html
+++ b/fileklp1.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             line-height: 1.7;
             background: #f5f5f5;
-            margin: 0;
+            margin: 10px;
             padding: 0;
         }
         .container {
@@ -132,3 +132,4 @@
 
 </body>
 </html>
+
