--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title fw-bold">Kelompok 9</h5>
                 <p class="card-text text-muted flex-grow-1">blblablaba</p>
-                <a href="fileklp1.html" class="btn btn-warning selengkapnya-btn mt-auto">Selengkapnya</a>
+                <a href="halaman9.pdf" class="btn btn-warning selengkapnya-btn mt-auto">Selengkapnya</a>
             </div>
         </div>
     </div>
@@ -335,3 +335,4 @@
 
 </body>
 </html>
+
