--- a/1.html
+++ b/1.html
@@ -9,10 +9,11 @@
 
 <h2>KELOMPOK 6</h2>
 
-<embed src="halaman6.pdf"
+<embed src="Klasifikasi Hewan & Tumbuhan Kelompok 6.pdf"
        type="application/pdf"
        width="100%"
        height="800px">
 
 </body>
 </html>
+
