--- a/1.html
+++ b/1.html
@@ -9,11 +9,12 @@
 
 <h2>KELOMPOK 6</h2>
 
-<embed src="Klasifikasi Hewan & Tumbuhan Kelompok 6.pdf"
+<embed src="HASIL PENGAMATAN KELOMPOK 9 REVISI 2.pdf"
        type="application/pdf"
        width="100%"
        height="800px">
 
 </body>
 </html>
+
 
