--- a/1.html
+++ b/1.html
@@ -9,12 +9,13 @@
 
 <h2>KELOMPOK 6</h2>
 
-<embed src="HASIL PENGAMATAN KELOMPOK 9 REVISI 2.pdf"
+<embed src="tim9.html"
        type="application/pdf"
        width="100%"
        height="800px">
 
 </body>
 </html>
+
 
 
