--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title fw-bold">Kelompok 6</h5>
                 <p class="card-text text-muted flex-grow-1">blblablaba</p>
-                <a href="1.html" class="btn btn-warning selengkapnya-btn mt-auto">Selengkapnya</a>
+                <a href="tim9.html" class="btn btn-warning selengkapnya-btn mt-auto">Selengkapnya</a>
             </div>
         </div>
     </div>
@@ -335,6 +335,7 @@
 
 </body>
 </html>
+
 
 
 
